# keepit

./: .gitignore  CMakeLists.txt  README.md  build.sh  gen.sh  run.sh
src/: fileReader.h  functions.h  main.cpp
